# automated-software-pipeline-demo

./: .gitignore  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: index.md
docs/architecture/: components.md  overview.md  workflows.md
docs/development/: contributing.md  testing.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: creating-problems.md  running-workflows.md  understanding-output.md
examples/reverse_string/: problem.txt
examples/three_sum/: problem.txt
examples/two_sum/: problem.txt
prompts/: analyze_performance.md  benchmark_solutions.md  build_alternative.md  build_tdd.md  clarify_problem.md  compare_approaches.md  mock_test.md  refine_solution.md  review_code.md  write_tests.md
src/pipeline/: __init__.py  cli.py  executor.py  models.py  parser.py  state.py  workspace.py
src/pipeline/agents/: __init__.py  base.py  claude_code.py  mock.py
tests/: __init__.py  test_agents.py  test_executor.py  test_state.py  test_workspace.py
workflows/: solve-simple.yaml  solve-with-performance.yaml  solve-with-review.yaml  test-mock.yaml  test-performance-mock.yaml  test-review-mock.yaml
